--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Talk template - AC Talk</title>
+  <title>AngularJS - Part 2 - AC Talk</title>
 
-  <meta name="description" content="My awesome talk description">
-  <meta name="author" content="Tiago Garcia, tgarcia@avenuecode.com">
+  <meta name="description" content="A deeper look into AngularJS architecture and components">
+  <meta name="author" content="Rafael Guedes, rguedes@avenuecode.com">
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
